--- a/index.html
+++ b/index.html
@@ -52,20 +52,35 @@
             <td>
                 <table>
                     <tr>
-                        <td>HTML</td>
+                        <td>Web Development</td>
                         <td>⭐⭐</td>
                     </tr>
                     <tr>
-                        <td>CSS</td>
-                        <td>⭐⭐</td>
+                        <td>Windows OS</td>
+                        <td>⭐⭐⭐⭐⭐</td>
                     </tr>
                     <tr>
-                        <td>JS</td>
-                        <td>⭐</td>
+                        <td>MAC OS</td>
+                        <td>⭐⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Microsoft Visual Studio </td>
+                        <td>⭐⭐</td>
                     </tr>
                 </table>
             </td>
-            <td></td>
+            <td>
+                <table>
+                    <tr>
+                        <td>Adobe Dreamweaver</td>
+                        <td>⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Adobe PhotoShop</td>
+                        <td>⭐⭐</td>
+                    </tr>
+                </table>
+            </td>
         </tr>
     </table>
 
