--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <td> <img src="images/lazarkapsar150.png" alt="profile picture"></td>
             <td>
                 <h1>Lazar Kapsarov</h1>
-                <p><em>Founder and CTO of <strong><a href="http://www.travel-atlatis.com/"> The App Travel-Atlatis</a></strong></em></p>
-                <p>I am an Front-End-Developer.I ❤ coffe and nature</p>
+                <p><em>Owner<strong><a href="http://www.travel-atlatis.com/"> The App Travel-Atlatis</a></strong></em></p>
+                <p>I am Learning Web Developer.</p>
             </td>
         </tr>
     </table>
@@ -53,7 +53,7 @@
                 <table>
                     <tr>
                         <td>Web Development</td>
-                        <td>⭐⭐</td>
+                        <td>⭐</td>
                     </tr>
                     <tr>
                         <td>Windows OS</td>
